<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:enabled="true"
        android:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <group android:menuCategory="container">
        <item android:id="@+id/setting"
            android:title="@string/setting" />
        <item android:id="@+id/about"
            android:title="@string/about" />
    </group>

</menu>